# needlet_decomp

./: AUTHORS  Makefile  Makefile.am  NEWS  README.asciidoc  config.h.in  configure.ac  main.cpp  needlet_decomp.bib  needlet_decomp.nw  needlets.cpp  needlets.hpp  test-needlet.cpp  test_needlet.cpp  window-function-plot.r
src/: main.nw  needlets.nw
